Sandbox/07-04-2025/force-app/main/default/objects/Segment_Revenue_Transaction__c/Segment_Revenue_Transaction__c.object-meta.xml
<CustomObject>
    <description>Join Object between Sales and Supply Databases.</description>
    <label>Segment Revenue Transaction</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Segment Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Revenue Transactions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>