Sandbox/07-04-2025/force-app/main/default/objects/Segment_Revenue_Transaction__c/fields/Impressions_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Impressions_RollUp__c</fullName>
    <inlineHelpText>Roll up of Sales Database .It is manage by Flow.</inlineHelpText>
    <label>Impressions RollUp</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>