Sandbox/07-04-2025/force-app/main/default/objects/Segment_Revenue_Transaction__c/fields/Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>Primary_Key__c</fullName>
    <description>Unique Combination Key</description>
    <externalId>true</externalId>
    <inlineHelpText>Always enter a unique value on this field to be sure of Sales and Supply and Record junction duplication avoidance.</inlineHelpText>
    <label>Primary Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>