Sandbox/07-04-2025/force-app/main/default/objects/Segment_Revenue_Transaction__c/fields/Segment_Key__c.field-meta.xml
<CustomField>
    <fullName>Segment_Key__c</fullName>
    <formula>Segment_Category_Mapping__r.Segment_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Key</label>
    <type>Text</type>
</CustomField>