Sandbox/07-04-2025/force-app/main/default/objects/Segment_Revenue_Transaction__c/fields/Segment_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Segment_Purpose__c</fullName>
    <formula>Segment_Category_Mapping__r.Segment_Purpose__c</formula>
    <label>Segment Purpose</label>
    <type>Text</type>
</CustomField>