Sandbox/07-04-2025/force-app/main/default/objects/Segment_Revenue_Transaction__c/fields/Total_Adjustments_NEW__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustments_NEW__c</fullName>
    <label>Total Adjustments NEW</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>