Sandbox/07-04-2025/force-app/main/default/objects/Segment_Revenue_Transaction__c/fields/Total_Segment_Uniques__c.field-meta.xml
<CustomField>
    <fullName>Total_Segment_Uniques__c</fullName>
    <label>Total Segment Uniques</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>